--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue": "^2.7.16",
     "vuetify": "^2.5.5",
-    "zod": "^4.0.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
     "@nuxt/postcss8": "^1.1.3",
-    "@nuxt/types": "^2.15.7",
+    "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.0.1",
     "@nuxtjs/vuetify": "^1.12.1",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/node": "^24.1.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
@@ -35,6 +37,6 @@
     "postcss": "^8.2.8",
     "prettier": "^2.3.2",
     "sass": "^1.37.5",
-    "sass-loader": "10.1.1"
+    "sass-loader": "^10.4.1"
   }
 }
